# secgit

./: .dockerignore  .gitignore  CLA.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  deny.toml  rust-toolchain.toml
.github/workflows/: ci.yml
bins/secgit-server/: Cargo.toml
bins/secgit-server/src/: abuse.rs  api.rs  authz.rs  config.rs  events.rs  http.rs  importer.rs  kbs.rs  main.rs  metrics.rs  pow.rs  ratelimit.rs  ssh.rs  sso.rs  tls.rs  web.rs
bins/secgit-server/tests/: tier_leaktest.rs
crates/secgit-api/: Cargo.toml
crates/secgit-api/src/: lib.rs
crates/secgit-attest/: Cargo.toml
crates/secgit-attest/src/: lib.rs  mock.rs  snp.rs  tdx.rs  vcek.rs
crates/secgit-audit/: Cargo.toml
crates/secgit-audit/src/: lib.rs  merkle.rs
crates/secgit-crypto/: Cargo.toml
crates/secgit-crypto/src/: aead.rs  envelope.rs  error.rs  ids.rs  kem.rs  lib.rs  mldsa.rs  primitives.rs  sig.rs
crates/secgit-forge/: Cargo.toml
crates/secgit-forge/src/: lib.rs
crates/secgit-git/: Cargo.toml
crates/secgit-git/src/: lib.rs
crates/secgit-identity/: Cargo.toml
crates/secgit-identity/src/: auth.rs  lib.rs  model.rs  session.rs  store.rs  totp.rs
crates/secgit-import/: Cargo.toml
crates/secgit-import/src/: lib.rs
crates/secgit-keybroker/: Cargo.toml
crates/secgit-keybroker/src/: lib.rs  replay.rs  trustee.rs
crates/secgit-leaktest/: Cargo.toml
crates/secgit-leaktest/src/: lib.rs
crates/secgit-net/: Cargo.toml
crates/secgit-net/src/: lib.rs
crates/secgit-review/: Cargo.toml
crates/secgit-review/src/: lib.rs  model.rs
crates/secgit-search/: Cargo.toml
crates/secgit-search/src/: lib.rs
crates/secgit-sso/: Cargo.toml
crates/secgit-sso/src/: lib.rs  saml.rs  scim.rs  xml.rs
crates/secgit-sso/tests/fixtures/: idp_cert.pem  idp_cert_other.pem  idp_key_pkcs8.der
crates/secgit-store/: Cargo.toml
crates/secgit-store/src/: lib.rs
crates/secgit-verify/: Cargo.toml
crates/secgit-verify/src/: acceptance.rs  main.rs  probe.rs  tlsclient.rs
deploy/: Dockerfile  docker-compose.yml  provenance.vk.json  repro-build.sh  seccomp-secgit.json  snp-inputs.example.json  up.sh  verify-no-secrets.sh
deploy/guest/: build-guest.sh  build-ovmf.sh  launch-snp.sh  mkosi.conf  mkosi.finalize  nftables.conf  ovmf.pin.json  secgit.service
deploy/guest/mkosi.pkgmngr/etc/apt/preferences.d/: backports-kernel.pref
deploy/guest/mkosi.pkgmngr/etc/apt/sources.list.d/: bookworm-backports.sources
docs/: STATUS.md  acceptance-snp.md  dev-macos.md  metadata-boundary.md  no-ai-training.md  operations.md  packaging.md  sso-saml.md  threat-model.md
docs/adr/: 0001-toolchain-all-rust.md  0002-cvm-attestation.md  0003-key-hierarchy.md  0004-crypto-stack.md  0005-reproducible-builds.md  0006-identity-auth.md  0007-deployment.md  0008-licensing-ip.md  0009-milestones.md  0010-open-subdecisions.md
xtask/: Cargo.toml
xtask/src/: main.rs
