[package]
name = "xtask"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Reproducible-build + image-transparency tooling for SecGit"
publish = false

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
secgit-crypto.workspace = true
secgit-audit.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
