[package]
name = "secgit-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Independent tamper-evident transparency log (hash-chain + Merkle), PQC-signed"

[dependencies]
secgit-crypto.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true

[dev-dependencies]
secgit-leaktest.workspace = true
