[package]
name = "secgit-git"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Git smart-HTTP wire handlers (shell out to git-upload-pack/receive-pack)"

[dependencies]
thiserror.workspace = true

# Kill the whole git process group (child + grandchildren like `pack-objects`) on a
# timeout/output-cap. Unix-only; other targets fall back to a direct child kill.
[target.'cfg(unix)'.dependencies]
libc.workspace = true
