[package]
name = "secgit-import"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "GitHub importer (repos, issues, PRs, metadata) that runs inside the SecGit CVM"

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
