[package]
name = "secgit-keybroker"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Attestation-gated KEK release (Trustee KBS adapter + local RCAR broker)"

[dependencies]
secgit-crypto.workspace = true
secgit-attest.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
hex.workspace = true
