[package]
name = "secgit-verify"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Standalone user-facing verifier for SecGit attestation and audit proofs"

[[bin]]
name = "secgit-verify"
path = "src/main.rs"

[dependencies]
secgit-crypto.workspace = true
secgit-net.workspace = true
secgit-attest.workspace = true
secgit-keybroker.workspace = true
secgit-store.workspace = true
secgit-audit.workspace = true
secgit-leaktest.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
hex.workspace = true
rustls.workspace = true
